Navigation for remote host fixed

--- a/Portfolio.IU.Wasm/wwwroot/appsettings.Production.json
+++ b/Portfolio.IU.Wasm/wwwroot/appsettings.Production.json
@@ -1,4 +1,4 @@
 {
   "ConfigValue": "PRODUCTION CONFIG",
-  "HttpClientBaseAddress": "https://myportfolio-gui.herokuapp.com/api/project"
+  "HttpClientBaseAddress": "https://myportfolio-gui.herokuapp.com"
 }
