--- a/Portfolio.API/Portfolio.API.csproj
+++ b/Portfolio.API/Portfolio.API.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="5.0.353" />
     <PackageReference Include="Markdig" Version="0.22.0" />
+    <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
