--- a/Portfolio.IU.Wasm/Portfolio.IU.Wasm.csproj
+++ b/Portfolio.IU.Wasm/Portfolio.IU.Wasm.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="5.0.353" />
     <PackageReference Include="Markdig" Version="0.22.0" />
+    <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
