--- a/Portfolio.Shared/Portfolio.Shared.csproj
+++ b/Portfolio.Shared/Portfolio.Shared.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Markdig" Version="0.22.0" />
     <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.9" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
