--- a/Portfolio.IU.Wasm/Portfolio.IU.Wasm.csproj
+++ b/Portfolio.IU.Wasm/Portfolio.IU.Wasm.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Markdig" Version="0.22.0" />
     <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.9" />
