--- a/Portfolio.IU.Wasm/wwwroot/appsettings.json
+++ b/Portfolio.IU.Wasm/wwwroot/appsettings.json
@@ -1,4 +1,8 @@
 {
   "ConfigValue": "this is the developement value",
-  "HttpClientBaseAddress": "http://localhost:5005"
+  "HttpClientBaseAddress": "http://localhost:5005",
+  "Auth0": {
+    "Authority": "https://<dev-f6kthe8k.us.auth0.com>",
+    "ClientId": "<rzq4s199iYCPqAHhzd8bMBVVzpktcrLZ>"
+  }
 }
