--- a/Portfolio.API/appsettings.json
+++ b/Portfolio.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Authority": "https://<dev-f6kthe8k.us.auth0.com>"
+    //"ApiIdentifier": "https://portfolio-stuart-nielsen.com"
+  }
 }
